Fix: Correct some layout issues within the original document view

--- a/puppetplays-web/components/Work/workDocument.module.scss
+++ b/puppetplays-web/components/Work/workDocument.module.scss
@@ -8,6 +8,11 @@
   background-color: rgba(255, 255, 255, 0.95);
 }
 
+.layout {
+  display: flex;
+  align-items: stretch;
+}
+
 .header {
   position: relative;
 
@@ -19,6 +24,7 @@
 }
 
 .content {
+  flex: 1 1 auto;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -53,18 +59,26 @@
 }
 
 .sidebar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 280px;
-  margin-left: -240px;
+  display: none;
+  height: 100%;
   background-color: white;
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.25);
   transition: margin-left 0.25s ease-in-out;
 
   &[data-open='true'] {
     margin-left: 0;
+  }
+
+  @media (min-width: 540px) {
+    display: block;
+    flex: 0 1 200px;
+    margin-left: -150px;
+  }
+
+  @media (min-width: 800px) {
+    display: block;
+    flex: 0 0 280px;
+    margin-left: -240px;
   }
 }
 
@@ -159,7 +173,7 @@
     align-items: center;
     justify-content: center;
     gap: 32px;
-    padding: 12px 0;
+    padding: 12px 24px;
   }
 
   &[data-selected='true'] img {
